# Eliot
# Copyright (C) 2008  Olivier Teulière
# Authors: Olivier Teulière <ipkiss @@ gmail.com>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA

localedir = $(datadir)/locale

if BUILD_QT

AM_CPPFLAGS = -DLOCALEDIR=\"$(localedir)\" @QT_CFLAGS@ -I$(top_srcdir) -I../intl -I$(top_srcdir)/dic -I$(top_srcdir)/game

SUFFIXES=.ui.h .moc.cpp

bin_PROGRAMS = qeliot

EXTRA_DIST = \
    ui/main_window.ui \
    ui/new_game.ui \
    ui/player_widget.ui

BUILT_SOURCES = \
    ui/main_window.ui.h \
    ui/new_game.ui.h \
    ui/player_widget.ui.h \
    new_game.moc.cpp \
    bag_widget.moc.cpp \
    score_widget.moc.cpp \
    board_widget.moc.cpp \
    player_widget.moc.cpp \
    history_widget.moc.cpp \
    aux_window.moc.cpp \
    main_window.moc.cpp

qeliot_SOURCES = \
    qtcommon.h \
    bag_widget.cpp bag_widget.h \
    new_game.cpp new_game.h \
    score_widget.cpp score_widget.h \
    board_widget.cpp board_widget.h \
    history_widget.cpp history_widget.h \
    player_widget.cpp player_widget.h \
    aux_window.cpp aux_window.h \
    main_window.cpp main_window.h \
    main.cpp
qeliot_SOURCES += $(BUILT_SOURCES)

qeliot_LDADD = @QT_LIBS@ ../game/libgame.a ../dic/libdic.a @LIBINTL@

# Generate the implementation file from the header
%.moc.cpp: %.h
	$(MOC) -o $@ $<

# Generate the header from the .ui file
# We want to translate the string with gettext, not Qt own way
%.ui.h: %.ui
	mkdir -p ui
	rm -f $@ $@.tmp
	echo "// Note: Lines below generated by Eliot build system" > $@.tmp
	echo "#include \"qtcommon.h\"" >> $@.tmp
	echo "#define Q_(a,b) QString::fromUtf8(_(a))" >> $@.tmp
	$(UIC) -tr "Q_" $< >> $@.tmp
	sed 's/Q_(\"_(\\\"\(.*\)\\\")"/Q_("\1"/' $@.tmp >$@
	rm -f $@.tmp


endif

